--- a/views/index.html
+++ b/views/index.html
@@ -100,10 +100,10 @@
                 <thead>
                 <tr>
                     <th field-name="date" display-name="DATE"  enable-sorting="true"></th>
-                    <th field-name="time" display-name="NAME" ></th>
-                    <th field-name="bNumber" display-name="B_NUMBER" ></th>
-                    <th field-name="duration" display-name="DURATION" ></th>
-                    <th field-name="pay" display-name="CHARGED" enable-sorting=></th>
+                    <th field-name="time" display-name="NAME" enable-sorting="true"></th>
+                    <th field-name="bNumber" display-name="B_NUMBER" enable-sorting="true"></th>
+                    <th field-name="duration" display-name="DURATION" enable-sorting="true"></th>
+                    <th field-name="pay" display-name="CHARGED" enable-sorting="true"></th>
                     <th field-name="tax" display-name="TAX" ></th>
                     <th field-name="roamCountryId" display-name="ROAM_COUNTRY" ></th>
                     <th field-name="roamOperator" display-name="ROAM_OPERATOR" ></th>
